problema front 8