@@ -1,6 +1,5 @@
 package equipo10.integrador_v01.config.security;
 
-import com.sun.tools.javac.util.List;
 import equipo10.integrador_v01.config.security.jwt.JwtEntryPointConfig;
 import equipo10.integrador_v01.config.security.jwt.JwtTokenFilterConfig;
 import equipo10.integrador_v01.service.jwt.UsuarioDetailsService;
@@ -101,9 +100,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("*"));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowCredentials(false);
+        config.setAllowedOriginPatterns(Arrays.asList("*"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowCredentials(true);
         config.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization"));
         UrlBasedCorsConfigurationSource cors = new UrlBasedCorsConfigurationSource();
         cors.registerCorsConfiguration("/**", config);
